// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomePage component should match snapshot 1`] = `
<ProtectedRoute
  component={[Function]}
  path="/meetups/:id"
  render={[Function]}
/>
`;

exports[`HomePage component should match snapshot 2`] = `
<ProtectedRoute
  path="/dashboard"
  render={[Function]}
/>
`;
